terraform/modules/istio/values/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "${host}"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "${tls_secret_name}"
      hosts:
        - "${host}"
